feat: specify amplify build file

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ backend:
       commands:
         - '# Execute Amplify CLI with the helper script'
         - envCache --set stackInfo ""
-        - amplifyPush --environment $USER_BRANCH --simple
+        - amplifyPush --environment $USER_BRANCH main
 frontend:
   phases:
     preBuild:
