--- a/amplify.yml
+++ b/amplify.yml
@@ -5,7 +5,7 @@ backend:
     build:
       commands:
         - '# Execute Amplify CLI with the helper script'
-        - envCache --set stackInfo ""
+        # - envCache --set stackInfo ""
         - amplifyPush --environment $USER_BRANCH main
 frontend:
   phases:
