--- a/amplify.yml
+++ b/amplify.yml
@@ -1,12 +1,12 @@
 
 version: 0.1
-backend:
-  phases:
-    build:
-      commands:
-        - '# Execute Amplify CLI with the helper script'
-        # - envCache --set stackInfo ""
-        - amplifyPush --environment $USER_BRANCH main
+# backend:
+#   phases:
+#     build:
+#       commands:
+#         - '# Execute Amplify CLI with the helper script'
+#         # - envCache --set stackInfo ""
+#         - amplifyPush --environment $USER_BRANCH main
 frontend:
   phases:
     preBuild:
