feat: downgrade to nextjs 14 && react-18

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@aws-amplify/adapter-nextjs": "^1.2.26",
     "@aws-amplify/ui-react": "^6.5.5",
     "aws-amplify": "^6.8.0",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "next": "14.0.1",
+   "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.6.2",
